# gem

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  install.sh  keymap.json  layout.json  settings.json  startup.sh
src/: action.rs  app.rs  config.rs  input.rs  main.rs  plugin.rs  secure.rs  tag.rs  timer.rs
src/storage/: ingest.rs  mod.rs  note.rs  project.rs  todo.rs
src/ui/: dashboard.rs  gemxmap.rs  mod.rs  shortcuts.rs
themes/: default.json
