[package]
name = "gemx"
version = "0.0.3"
edition = "2021"

[dependencies]
crossterm = "0.26"
tui = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
clipboard = "0.5"
walkdir = "2.4"
lazy_static = "1.4"
aes-gcm = { version = "0.10", features = ["std"] }
libloading = "0.8"
